[workspace]
members = ["crm", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde_yaml = "0.9.34"