[package]
name = "crm-send"
version = "0.1.0"
edition = "2024"

[features]
default = []
test_utils = ["fake"]





[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = "0.8.5"
derive_builder = "0.20.2"
tracing-subscriber = "0.3.22"
serde_yaml = { workspace = true }
futures = "0.3.32"
tracing = "0.1.44"
itertools = "0.12.1"
tokio-stream = "0.1.18"
uuid = { version = "1.21.0", features = ["v4"] }
fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true }


[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "=0.6.1"

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }

nanoid = "0.4.0"
