[package]
name = "crm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"




[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
derive_builder = "0.20.2"
user-stat = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { workspace = true }
futures = "0.3.32"
tokio-stream = "0.1.15"
uuid = "1.21.0"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }






[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "=0.6.1"
